<resources>
    <string name="app_name">RoundDate</string>

    <string name="save">Сохранить</string>
    <string name="cancel">Отменить</string>
    <string name="add_event">Добавить событие</string>
    <string name="action_event">Событие</string>

    <!-- Названия пунктов меню -->
    <string name="action_event_list">События</string>
    <string name="action_settings">Настройки</string>
    <string name="action_filter">Фильтр</string>
    <string name="action_about">О приложении</string>
    <string name="action_exit">Выйти</string>


    <string name="about_text">
        RoundDate – приложение для тех, кому не хватает праздничных дней. Приложение позволяет добавить дату и время произвольного
        события из вашей жизни и формирует список дат, которые можно было бы считать праздничными датами (Круглые Даты). \n\n

        Причем такие даты могут вычисляться не только по прошедшим годам с момента события, но и по другим единицам времени (месяц,
        неделя, день, час, минута, секунда). Согласитесь, приятно же отметить не только 18, 25, 50 лет со дня своего рождения,
        но и 10 000 дней, или 300 000 часов, или 1 000 000 000 секунд с момента своего рождения или же других событий.
        Например, окончание школы или ВУЗа, первый поцелуй, свадьба, получение прав, новоселье, полет в космос и прочие
        события как из вашей жизни, так и из жизни ваших родных, друзей и близких.\n\n

        Приложение позволяет сохранять произвольное количество событий, а гибкая система настроек отслеживания будет формировать и
        сохранять оптимальный для вас список Круглых Дат (для конкретных событий или групп событий можно задавать индивидуальные
        настройки, отличные от общих настроек приложения). \n\n

        <!--Задав настройки фильтра, вы будете видеть в приложении только нужные вам Круглые Даты
        (в зависимости от важности дат, принадлежности к группам событий и т.д.). \n\n-->

        Сервисная служба рассылки уведомлений, работающая в фоновом режиме, не позволит вам забыть про важные для вас Круглые Даты.
        Для каждого типа важности Круглых Дат можно задать свои настройки уведомлений (за месяц, за неделю, за день).
    </string>
    <string name="enter_event_name">Введите название события</string>
    <string name="enter_event_comment">Введите комментарий к событию</string>
    <string name="events_group">Группа событий</string>
    <string name="new_events_group">Введите название группы событий</string>
    <string name="use_app_settings">Использовать настройки приложения</string>
    <string name="use_events_group_settings">Использовать настройки группы событий</string>
    <string name="use_event_settings">Использовать настройки события</string>
    <string name="new_event">Новое событие</string>
    <string name="event_date">Дата события</string>
    <string name="event_time">Время события</string>
    <string name="track_settings">Настройки отслеживания</string>
    <string name="small_important_round_date">Маловажные круглые даты</string>
    <string name="standart_round_date">Стандартные круглые даты</string>
    <string name="important_round_date">Важные круглые даты</string>
    <string name="very_important_round_date">Очень важные круглые даты</string>
    <string name="notification_settings">Настройки уведомлений</string>
    <string name="round_date_in_secs">Круглые даты в секундах</string>
    <string name="round_date_in_minutes">Круглые даты в минутах</string>
    <string name="round_date_in_hours">Круглые даты в часах</string>
    <string name="round_date_in_days">Круглые даты в днях</string>
    <string name="round_date_in_weeks">Круглые даты в неделях</string>
    <string name="round_date_in_months">Круглые даты в месяцах</string>
    <string name="round_date_in_years">Круглые даты в годах</string>
    <string name="tv_default">TextView</string>
    <string name="load_drault_settings">Сбросить настройки по умолчанию</string>
    <string name="track">Отслеживать</string>
    <string name="confirm">Подтвердить</string>
    <string name="my_events">Мои события</string>
    <string name="choice_event_group">Выбор группы событий</string>
    <string name="new_event_group">Новая группа событий</string>
    <string name="event_name_not_fill">Поле названия события не заполнено</string>
    <string name="events_group_name_not_fill">Поле названия группы событий не заполнено</string>
    <string name="events_group_is_exists">Группа событий с таким именем уже существует</string>
    <string name="event_name_is_exists">Событие с таким именем уже существует</string>
    <string name="all_events">Все события</string>
    <string name="edit_events_group">Редактировать группу событий</string>
    <string name="edit_event">Редактировать событие</string>
    <string name="since_the_event_time_has_passed">с момента события прошло времени</string>
    <string name="in_years">в годах:</string>
    <string name="in_months">в месяцах:</string>
    <string name="in_weeks">в неделях:</string>
    <string name="in_days">в днях:</string>
    <string name="in_hours">в часах:</string>
    <string name="in_minutes">в минутах:</string>
    <string name="in_secs">в секундах:</string>
    <string name="event_has_not_yet_occurred">Событие еще не наступило</string>
    <string name="years_1">год</string>
    <string name="years_2">года</string>
    <string name="years_3">лет</string>
    <string name="months_1">месяц</string>
    <string name="months_2">месяца</string>
    <string name="months_3">месяцев</string>
    <string name="weeks_1">неделя</string>
    <string name="weeks_2">недели</string>
    <string name="weeks_3">недель</string>
    <string name="days_1">день</string>
    <string name="days_2">дня</string>
    <string name="days_3">дней</string>
    <string name="hours_1">час</string>
    <string name="hours_2">часа</string>
    <string name="hours_3">часов</string>
    <string name="minutes_1">минута</string>
    <string name="minutes_2">минуты</string>
    <string name="minutes_3">минут</string>
    <string name="secs_1">сек.</string>
    <string name="secs_2">сек.</string>
    <string name="secs_3">сек.</string>
    <string name="over">более</string>
    <string name="less">менее</string>
    <string name="already_passed">уже прошло</string>
    <string name="years_4">года</string>
    <string name="months_4">месяца</string>
    <string name="weeks_4">недели</string>
    <string name="days_4">дня</string>
    <string name="hours_4">часа</string>
    <string name="minutes_4">минуты</string>
    <string name="secs_4">сек.</string>
    <string name="editing_event">Редактирование события</string>
    <string name="editing_events_group">Редактирование группы событий</string>
    <string name="event">Событие</string>
    <string name="adding_event">Добавление события</string>
    <string name="delete_event">Удалить событие</string>
    <string name="delete_event_group">Удалить группу событий</string>
    <string name="attention">Внимание</string>
    <string name="do_you_want_to_remove_the_event">Вы действительно хотите удалить событие?</string>
    <string name="do_you_want_to_remove_the_events_group">Вы действительно хотите удалить группу событий и все ее события?</string>
    <string name="event_group_name">Название группы событий</string>
    <string name="choice_importan">Выбор важности круглой даты</string>
    <string name="this_events_group_not_be_deleted">Эта группа событий не может быть удалена</string>
    <string name="will">будет</string>
    <string name="since_the_event">с момента события</string>
    <string name="rounddate_list_of_event">Список круглых дат события</string>
    <string name="rounddate_list_of_eventsgroup">Список круглых дат группы событий</string>
    <string name="one_day">1 день</string>
    <string name="one_week">7 дней</string>
    <string name="one_month">30 дней</string>
    <string name="not_notify">Не уведомлять</string>
    <string name="notice_for">Уведомлять за</string>
    <string name="error">Ошибка</string>
    <string name="soon_round_date">Приближается круглая дата</string>
    <string name="channel_name">My channel name</string>
    <string name="channel_description">Уведомления о скором наступлении события</string>


</resources>
