<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ru.alexanderdolinsky.rounddate.AddEditEventActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvAddEditEvent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_new_event"
                android:textSize="@dimen/text_title" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_size"
                android:background="@color/colorDivider" />

            <EditText
                android:id="@+id/etEventName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/space_top_bottom"
                android:layout_marginTop="@dimen/space_top_bottom"
                android:hint="@string/enter_event_name"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/etEventComment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/space_top_bottom"
                android:layout_marginTop="@dimen/space_top_bottom"
                android:hint="@string/enter_event_comment"
                android:inputType="textPersonName" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvEventsGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/big_space_top"
                    android:text="@string/events_group"
                    android:textSize="@dimen/text_title" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/divider_size"
                    android:background="@color/colorDivider" />

                <TextView
                    android:id="@+id/tvCurrentEventsGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:gravity="center"
                    android:minHeight="60dp"
                    android:onClick="onChoiceEventGroup"
                    android:text="@string/current_events_group"
                    android:textAlignment="center"
                    android:textSize="@dimen/large_size" />

                <EditText
                    android:id="@+id/etNewEventsGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/space_top_bottom"
                    android:layout_marginTop="@dimen/space_top_bottom"
                    android:hint="@string/new_events_group"
                    android:inputType="textPersonName" />

            </LinearLayout>

            <TextView
                android:id="@+id/tvEventDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/big_space_top"
                android:textSize="@dimen/text_title"
                android:text="@string/event_date" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_size"
                android:background="@color/colorDivider" />

            <TextView
                android:id="@+id/tvCurrentEventDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:minHeight="60dp"
                android:onClick="onChoiceEventDate"
                android:text="27 мая 2017"
                android:textAlignment="center"
                android:textSize="@dimen/text_title" />

            <TextView
                android:id="@+id/tvEventTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/big_space_top"
                android:text="@string/event_time"
                android:textSize="@dimen/text_title" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_size"
                android:background="@color/colorDivider" />

            <TextView
                android:id="@+id/tvCurrentEventTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:minHeight="60dp"
                android:onClick="onChoiceEventTime"
                android:text="12:00"
                android:textAlignment="center"
                android:textSize="@dimen/text_title" />

            <TextView
                android:id="@+id/tvSettings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/big_space_top"
                android:textSize="@dimen/text_title"
                android:text="@string/track_settings" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_size"
                android:background="@color/colorDivider" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/rbUseAppSettings"
                    style="@style/Widget.AppCompat.CompoundButton.RadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:minHeight="60dp"
                    android:text="@string/use_app_settings"
                    android:textSize="@dimen/large_size" />

                <RadioButton
                    android:id="@+id/rbUseEventsGroupSettings"
                    style="@android:style/Widget.CompoundButton.RadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:minHeight="60dp"
                    android:text="@string/use_events_group_settings"
                    android:textSize="@dimen/large_size" />

                <RadioButton
                    android:id="@+id/rbUseEventSettings"
                    style="@android:style/Widget.DeviceDefault.CompoundButton.RadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:minHeight="60dp"
                    android:text="@string/use_event_settings"
                    android:textSize="@dimen/large_size" />

            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"></LinearLayout>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/linearLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp">

        <Button
            android:id="@+id/btn_save"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onSaveEvent"
            android:text="@string/save" />

        <Button
            android:id="@+id/btn_cancel"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onCancel"
            android:text="@string/cancel" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
