<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ru.alexanderdolinsky.rounddate.EditEventGroupActivity">


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/linearLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp">

        <Button
            android:id="@+id/btn_save"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onSaveEventsGroup"
            android:text="@string/save"
            android:textSize="@dimen/large_size" />

        <Button
            android:id="@+id/btn_cancel"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onCancel"
            android:text="@string/cancel"
            android:textSize="@dimen/large_size" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/svEditEventGroup"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvEventsGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/event_group_name"
                android:textSize="@dimen/text_title" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_size"
                android:background="@color/colorDivider" />

            <EditText
                android:id="@+id/etEventsGroupName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/space_top_bottom"
                android:layout_marginTop="@dimen/space_top_bottom"
                android:inputType="textCapSentences|textPersonName"
                android:maxLength="25" />

            <TextView
                android:id="@+id/tvSettings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/big_space_top"
                android:text="@string/track_settings"
                android:textSize="@dimen/text_title" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_size"
                android:background="@color/colorDivider" />

            <RadioGroup
                android:id="@+id/rgTracksettings"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/rbUseAppSettings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:minHeight="60dp"
                    android:text="@string/use_app_settings"
                    android:textSize="@dimen/large_size" />

                <RadioButton
                    android:id="@+id/rbUseEventsGroupSettings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:minHeight="60dp"
                    android:text="@string/use_events_group_settings"
                    android:textSize="@dimen/large_size" />

            </RadioGroup>

            <LinearLayout
                android:id="@+id/llTrackSettings"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:visibility="gone">


                <!--<TextView
                    android:id="@+id/tvTrackSettings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/track_settings"
                    android:textSize="@dimen/text_title" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/divider_size"
                    android:background="@color/colorDivider" />-->

                <LinearLayout
                    android:id="@+id/llRoundDateYear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:onClick="onClick"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="4dp"
                        android:paddingEnd="8dp"
                        android:paddingLeft="16dp"
                        android:paddingRight="8dp"
                        android:paddingStart="16dp"
                        android:paddingTop="8dp"
                        android:text="@string/round_date_in_years"
                        android:textSize="@dimen/large_size" />

                    <TextView
                        android:id="@+id/tvRoundDateInYears"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="8dp"
                        android:paddingLeft="16dp"
                        android:paddingTop="4dp"
                        android:text="@string/tv_default" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="8dp"
                    android:background="@color/colorDivider" />

                <LinearLayout
                    android:id="@+id/llRoundDateMonth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:onClick="onClick"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="4dp"
                        android:paddingEnd="8dp"
                        android:paddingLeft="16dp"
                        android:paddingRight="8dp"
                        android:paddingStart="16dp"
                        android:paddingTop="8dp"
                        android:text="@string/round_date_in_months"
                        android:textSize="@dimen/large_size" />

                    <TextView
                        android:id="@+id/tvRoundDateInMonths"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="8dp"
                        android:paddingLeft="16dp"
                        android:paddingTop="4dp"
                        android:text="@string/tv_default" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="8dp"
                    android:background="@color/colorDivider" />

                <LinearLayout
                    android:id="@+id/llRoundDateWeek"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:onClick="onClick"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="4dp"
                        android:paddingEnd="8dp"
                        android:paddingLeft="16dp"
                        android:paddingRight="8dp"
                        android:paddingStart="16dp"
                        android:paddingTop="8dp"
                        android:text="@string/round_date_in_weeks"
                        android:textSize="@dimen/large_size" />

                    <TextView
                        android:id="@+id/tvRoundDateInWeeks"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="8dp"
                        android:paddingLeft="16dp"
                        android:paddingTop="4dp"
                        android:text="@string/tv_default" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="8dp"
                    android:background="@color/colorDivider" />

                <LinearLayout
                    android:id="@+id/llRoundDateDay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:onClick="onClick"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="4dp"
                        android:paddingEnd="8dp"
                        android:paddingLeft="16dp"
                        android:paddingRight="8dp"
                        android:paddingStart="16dp"
                        android:paddingTop="8dp"
                        android:text="@string/round_date_in_days"
                        android:textSize="@dimen/large_size" />

                    <TextView
                        android:id="@+id/tvRoundDateInDays"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="8dp"
                        android:paddingLeft="16dp"
                        android:paddingTop="4dp"
                        android:text="@string/tv_default" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="8dp"
                    android:background="@color/colorDivider" />

                <LinearLayout
                    android:id="@+id/llRoundDateHour"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:onClick="onClick"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="4dp"
                        android:paddingEnd="8dp"
                        android:paddingLeft="16dp"
                        android:paddingRight="8dp"
                        android:paddingStart="16dp"
                        android:paddingTop="8dp"
                        android:text="@string/round_date_in_hours"
                        android:textSize="@dimen/large_size" />

                    <TextView
                        android:id="@+id/tvRoundDateInHours"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="8dp"
                        android:paddingLeft="16dp"
                        android:paddingTop="4dp"
                        android:text="@string/tv_default" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="8dp"
                    android:background="@color/colorDivider" />

                <LinearLayout
                    android:id="@+id/llRoundDateMinute"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:onClick="onClick"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="4dp"
                        android:paddingEnd="8dp"
                        android:paddingLeft="16dp"
                        android:paddingRight="8dp"
                        android:paddingStart="16dp"
                        android:paddingTop="8dp"
                        android:text="@string/round_date_in_minutes"
                        android:textSize="@dimen/large_size" />

                    <TextView
                        android:id="@+id/tvRoundDateInMinutes"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="8dp"
                        android:paddingLeft="16dp"
                        android:paddingTop="4dp"
                        android:text="@string/tv_default" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="8dp"
                    android:background="@color/colorDivider" />

                <LinearLayout
                    android:id="@+id/llRoundDateSec"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:onClick="onClick"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="4dp"
                        android:paddingEnd="8dp"
                        android:paddingLeft="16dp"
                        android:paddingRight="8dp"
                        android:paddingStart="16dp"
                        android:paddingTop="8dp"
                        android:text="@string/round_date_in_secs"
                        android:textSize="@dimen/large_size" />

                    <TextView
                        android:id="@+id/tvRoundDateInSecs"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="8dp"
                        android:paddingLeft="16dp"
                        android:paddingTop="4dp"
                        android:text="@string/tv_default" />

                </LinearLayout>


            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
